crates/trestle/tests/snapshots/corpus__basics_arithmetic.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    statements: [
        Let {
            name: "a",
            value: Add(
                Add(
                    Int(
                        1,
                    ),
                    Int(
                        2,
                    ),
                ),
                Int(
                    3,
                ),
            ),
        },
        Let {
            name: "b",
            value: Mul(
                Mul(
                    Int(
                        2,
                    ),
                    Int(
                        3,
                    ),
                ),
                Int(
                    4,
                ),
            ),
        },
        Let {
            name: "c",
            value: Add(
                Var(
                    "a",
                ),
                Var(
                    "b",
                ),
            ),
        },
    ],
}
