crates/trestle/tests/snapshots/corpus__basics_basics.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    statements: [
        Let {
            name: "x",
            value: Add(
                Int(
                    5,
                ),
                Int(
                    3,
                ),
            ),
        },
        Let {
            name: "y",
            value: Mul(
                Var(
                    "x",
                ),
                Int(
                    2,
                ),
            ),
        },
    ],
}
