crates/trestle/tests/snapshots/corpus__basics_precedence_and_grouping.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    statements: [
        Let {
            name: "natural",
            value: Add(
                Int(
                    1,
                ),
                Mul(
                    Int(
                        2,
                    ),
                    Int(
                        3,
                    ),
                ),
            ),
        },
        Let {
            name: "grouped",
            value: Mul(
                Add(
                    Int(
                        1,
                    ),
                    Int(
                        2,
                    ),
                ),
                Int(
                    3,
                ),
            ),
        },
        Let {
            name: "nested",
            value: Mul(
                Add(
                    Int(
                        1,
                    ),
                    Int(
                        2,
                    ),
                ),
                Add(
                    Int(
                        3,
                    ),
                    Int(
                        4,
                    ),
                ),
            ),
        },
    ],
}
