crates/trestle/tests/snapshots/corpus__functions_arrow_functions.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    expressions: [
        Expression {
            kind: Let {
                name: "identity",
                value: Expression {
                    kind: Lambda(
                        Lambda {
                            params: [
                                Param {
                                    name: "x",
                                    type_dec: None,
                                },
                            ],
                            return_type: None,
                            body: Expression {
                                kind: Var(
                                    "x",
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        189,
                                    ),
                                    length: 1,
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            182,
                        ),
                        length: 9,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    167,
                ),
                length: 24,
            },
        },
        Expression {
            kind: Let {
                name: "double",
                value: Expression {
                    kind: Lambda(
                        Lambda {
                            params: [
                                Param {
                                    name: "x",
                                    type_dec: None,
                                },
                            ],
                            return_type: None,
                            body: Expression {
                                kind: Mul(
                                    Expression {
                                        kind: Var(
                                            "x",
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                213,
                                            ),
                                            length: 1,
                                        },
                                    },
                                    Expression {
                                        kind: Int(
                                            2,
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                217,
                                            ),
                                            length: 1,
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        213,
                                    ),
                                    length: 5,
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            206,
                        ),
                        length: 14,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    191,
                ),
                length: 29,
            },
        },
        Expression {
            kind: Let {
                name: "four",
                value: Expression {
                    kind: FunctionInvocation(
                        "double",
                        [
                            Expression {
                                kind: Int(
                                    2,
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        238,
                                    ),
                                    length: 1,
                                },
                            },
                        ],
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            231,
                        ),
                        length: 9,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    220,
                ),
                length: 59,
            },
        },
        Expression {
            kind: Let {
                name: "same",
                value: Expression {
                    kind: FunctionInvocation(
                        "identity",
                        [
                            Expression {
                                kind: Var(
                                    "four",
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        299,
                                    ),
                                    length: 4,
                                },
                            },
                        ],
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            290,
                        ),
                        length: 14,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    279,
                ),
                length: 36,
            },
        },
    ],
}
