crates/trestle/tests/snapshots/corpus__functions_currying.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    expressions: [
        Expression {
            kind: Let {
                name: "add",
                value: Expression {
                    kind: Lambda(
                        Lambda {
                            parameter: Some(
                                Param {
                                    name: "a",
                                    type_dec: None,
                                },
                            ),
                            return_type: None,
                            body: Expression {
                                kind: Lambda(
                                    Lambda {
                                        parameter: Some(
                                            Param {
                                                name: "b",
                                                type_dec: None,
                                            },
                                        ),
                                        return_type: None,
                                        body: Expression {
                                            kind: Add(
                                                Expression {
                                                    kind: Var(
                                                        "a",
                                                    ),
                                                    span: SourceSpan {
                                                        offset: SourceOffset(
                                                            165,
                                                        ),
                                                        length: 1,
                                                    },
                                                },
                                                Expression {
                                                    kind: Var(
                                                        "b",
                                                    ),
                                                    span: SourceSpan {
                                                        offset: SourceOffset(
                                                            169,
                                                        ),
                                                        length: 1,
                                                    },
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    165,
                                                ),
                                                length: 5,
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        155,
                                    ),
                                    length: 17,
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            155,
                        ),
                        length: 17,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    145,
                ),
                length: 27,
            },
        },
        Expression {
            kind: Let {
                name: "add10",
                value: Expression {
                    kind: FunctionInvocation(
                        "add",
                        [
                            Expression {
                                kind: Int(
                                    10,
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        188,
                                    ),
                                    length: 2,
                                },
                            },
                        ],
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            184,
                        ),
                        length: 7,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    172,
                ),
                length: 71,
            },
        },
        Expression {
            kind: Let {
                name: "z",
                value: Expression {
                    kind: FunctionInvocation(
                        "add10",
                        [
                            Expression {
                                kind: Int(
                                    5,
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        257,
                                    ),
                                    length: 1,
                                },
                            },
                        ],
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            251,
                        ),
                        length: 8,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    243,
                ),
                length: 41,
            },
        },
        Expression {
            kind: Let {
                name: "w",
                value: Expression {
                    kind: FunctionInvocation(
                        "add",
                        [
                            Expression {
                                kind: Int(
                                    3,
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        296,
                                    ),
                                    length: 1,
                                },
                            },
                            Expression {
                                kind: Int(
                                    4,
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        299,
                                    ),
                                    length: 1,
                                },
                            },
                        ],
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            292,
                        ),
                        length: 9,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    284,
                ),
                length: 40,
            },
        },
    ],
}
