crates/trestle/tests/snapshots/corpus__functions_lambdas.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    expressions: [
        Expression {
            kind: Let {
                name: "identity",
                value: Expression {
                    kind: Lambda(
                        Lambda {
                            parameter: Some(
                                Param {
                                    name: "x",
                                    type_dec: None,
                                },
                            ),
                            return_type: None,
                            body: Expression {
                                kind: Var(
                                    "x",
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        277,
                                    ),
                                    length: 1,
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            270,
                        ),
                        length: 9,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    255,
                ),
                length: 24,
            },
        },
        Expression {
            kind: Let {
                name: "scale",
                value: Expression {
                    kind: Lambda(
                        Lambda {
                            parameter: Some(
                                Param {
                                    name: "x",
                                    type_dec: None,
                                },
                            ),
                            return_type: None,
                            body: Expression {
                                kind: Mul(
                                    Expression {
                                        kind: Var(
                                            "x",
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                301,
                                            ),
                                            length: 1,
                                        },
                                    },
                                    Expression {
                                        kind: Int(
                                            2,
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                305,
                                            ),
                                            length: 1,
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        301,
                                    ),
                                    length: 5,
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            294,
                        ),
                        length: 13,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    279,
                ),
                length: 28,
            },
        },
        Expression {
            kind: Let {
                name: "add",
                value: Expression {
                    kind: Lambda(
                        Lambda {
                            parameter: Some(
                                Param {
                                    name: "a",
                                    type_dec: Some(
                                        Named(
                                            "Int",
                                        ),
                                    ),
                                },
                            ),
                            return_type: None,
                            body: Expression {
                                kind: Lambda(
                                    Lambda {
                                        parameter: Some(
                                            Param {
                                                name: "b",
                                                type_dec: Some(
                                                    Named(
                                                        "Int",
                                                    ),
                                                ),
                                            },
                                        ),
                                        return_type: Some(
                                            Named(
                                                "Int",
                                            ),
                                        ),
                                        body: Expression {
                                            kind: Add(
                                                Expression {
                                                    kind: Var(
                                                        "a",
                                                    ),
                                                    span: SourceSpan {
                                                        offset: SourceOffset(
                                                            344,
                                                        ),
                                                        length: 1,
                                                    },
                                                },
                                                Expression {
                                                    kind: Var(
                                                        "b",
                                                    ),
                                                    span: SourceSpan {
                                                        offset: SourceOffset(
                                                            348,
                                                        ),
                                                        length: 1,
                                                    },
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    344,
                                                ),
                                                length: 5,
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        322,
                                    ),
                                    length: 28,
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            322,
                        ),
                        length: 28,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    307,
                ),
                length: 43,
            },
        },
        Expression {
            kind: Let {
                name: "curried",
                value: Expression {
                    kind: Lambda(
                        Lambda {
                            parameter: Some(
                                Param {
                                    name: "a",
                                    type_dec: Some(
                                        Named(
                                            "Int",
                                        ),
                                    ),
                                },
                            ),
                            return_type: None,
                            body: Expression {
                                kind: Lambda(
                                    Lambda {
                                        parameter: Some(
                                            Param {
                                                name: "b",
                                                type_dec: None,
                                            },
                                        ),
                                        return_type: None,
                                        body: Expression {
                                            kind: Add(
                                                Expression {
                                                    kind: Var(
                                                        "a",
                                                    ),
                                                    span: SourceSpan {
                                                        offset: SourceOffset(
                                                            383,
                                                        ),
                                                        length: 1,
                                                    },
                                                },
                                                Expression {
                                                    kind: Var(
                                                        "b",
                                                    ),
                                                    span: SourceSpan {
                                                        offset: SourceOffset(
                                                            387,
                                                        ),
                                                        length: 1,
                                                    },
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    383,
                                                ),
                                                length: 5,
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        376,
                                    ),
                                    length: 13,
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            365,
                        ),
                        length: 24,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    350,
                ),
                length: 39,
            },
        },
    ],
}
